--- a/domain-adaptation.tex
+++ b/domain-adaptation.tex
@@ -73,10 +73,11 @@
 
 \author[Bethard]{Dr. Steven Bethard}
 \institute[Arizona]{%
+Associate Professor\\
 School of Information\\
 University of Arizona}
 
-\title{Adapting natural language processing models across clinical domains}
+\title{Adapting machine learning models for clinical language processing}
 \date[]{26 Feb 2021}
 
 
@@ -85,6 +86,24 @@ University of Arizona}
 
 \begin{frame}
   \titlepage
+\end{frame}
+
+\begin{frame}{Research Interests}
+Natural language processing and machine learning, e.g.,:
+\begin{itemize}
+\item Modeling the language of time and timelines
+\begin{itemize}
+\item E.g., \textit{three days ago} $\Rightarrow$ \texttt{2022-06-17}
+\end{itemize}
+\item Normalizing text to medical and geospatial ontologies
+\begin{itemize}
+\item E.g., \textit{Nogales} $\Rightarrow$ \raisebox{-.5\height}{\includegraphics[width=0.5\textwidth]{nogales.png}}
+\end{itemize}
+\item Information extraction models for clinical applications
+\begin{itemize}
+\item E.g., 
+\end{itemize}
+\end{itemize}
 \end{frame}
 
 \section{Machine learning needs domain adaptation}
