Completes introduction slide

--- a/domain-adaptation.tex
+++ b/domain-adaptation.tex
@@ -89,19 +89,26 @@ University of Arizona}
 \end{frame}
 
 \begin{frame}{Research Interests}
-Natural language processing and machine learning, e.g.,:
+Broadly:
 \begin{itemize}
-\item Modeling the language of time and timelines
-\begin{itemize}
-\item E.g., \textit{three days ago} $\Rightarrow$ \texttt{2022-06-17}
+\item Natural language processing
+\item Machine learning (especially neural networks)
 \end{itemize}
-\item Normalizing text to medical and geospatial ontologies
+\onslide<2->
+\bigskip
+Specifically\only<3>{ (for this talk)}:
 \begin{itemize}
-\item E.g., \textit{Nogales} $\Rightarrow$ \raisebox{-.5\height}{\includegraphics[width=0.5\textwidth]{nogales.png}}
+\item \textcolor<3>{lightgray}{Modeling the language of time and timelines}
+\begin{itemize}
+\item \textcolor<3>{lightgray}{E.g., \textit{six days ago} $\Rightarrow$ \raisebox{-.5\height}{\visible<2>{\includegraphics[height=0.15\textheight]{2022-06-14.png}}}}
 \end{itemize}
-\item Information extraction models for clinical applications
+\item \textcolor<3>{lightgray}{Normalizing text to medical and geospatial ontologies}
 \begin{itemize}
-\item E.g., 
+\item \textcolor<3>{lightgray}{E.g., \textit{Nogales} $\Rightarrow$ \raisebox{-.5\height}{\visible<2>{\includegraphics[width=0.5\textwidth]{nogales.png}}}}
+\end{itemize}
+\item Adapting machine learning models to new domains
+\begin{itemize}
+\item Especially medical and clinical domains
 \end{itemize}
 \end{itemize}
 \end{frame}
