Squeezes title that didn't format right on another computer.

--- a/domain-adaptation.tex
+++ b/domain-adaptation.tex
@@ -647,7 +647,7 @@ Findings:
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Formalizing adaptation algorithm variants}{\cite{su-etal-2022-comparison}}
+\begin{frame}{Formalizing adaptation algorithm\,variants}{\cite{su-etal-2022-comparison}}
 \begin{tikzpicture}[
   font=\small,
   data/.style={font=\footnotesize, inner sep=0pt},
