Minor formatting updates. Deletes a completed grant

--- a/domain-adaptation.tex
+++ b/domain-adaptation.tex
@@ -452,7 +452,8 @@ Labels  \\
 }
 \end{tikzpicture}
 
-\begin{columns}
+\vspace*{-0.25\baselineskip}
+\begin{columns}[T]
 \begin{column}{0.53\textwidth}
 Assumptions:
 \begin{itemize}
@@ -521,7 +522,8 @@ Features & Label \\
 }
 \end{tikzpicture}
 
-\begin{columns}
+\vspace*{-0.4\baselineskip}
+\begin{columns}[T]
 \begin{column}{0.46\textwidth}
 Assumptions:
 \begin{itemize}
@@ -850,6 +852,7 @@ PMB = PubMedBERT; O = Ontology; T = target domain terms
 
 }
 
+\bigskip
 Findings:
 \begin{itemize}
 \item<2-> Triplet-training on ontology yields better term-to-vector network
@@ -937,11 +940,6 @@ Automated Domain Adaptation for Clinical Natural Language Processing
 \includegraphics[trim=50 50 50 50, clip, height=.1\textheight, valign=t]{nsf.png}
 &
 \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1831551}{A Data Science Platform and Mechanisms for Its Sustainability}
-\\[4ex]
-
-\includegraphics[trim=60 40 60 60, clip, height=.06\textheight, valign=t]{darpa.png}
-&
-\href{https://www.darpa.mil/program/world-modelers}{Global Reading and Assembly for Semantic, Probabilistic World Models}
 \end{tabular}
 \end{frame}
 
